--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "react-bootstrap": "^2.10.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1",
     "react-query": "^3.39.3",
-    "reactstrap": "^9.2.2"
+    "react-router-dom": "^6.22.1",
+    "reactstrap": "^9.2.2",
+    "sweetalert2": "^11.10.5",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
