--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
     "dev": "vite --port 3000",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "host": "vite --port 3000 --host"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^3.1.0",
