--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.1",
     "reactstrap": "^9.2.2",
+    "react-apexcharts": "^1.4.1",
+    "apexcharts": "^3.48.0",  
 
     "sweetalert2": "^11.10.5",
     "sweetalert2-react-content": "^5.0.7"
