--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-floating-action": "^1.22.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-material-bottom-navigation": "^1.0.5",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^5.12.3",
