--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
@@ -23,6 +24,8 @@
     "react-native-material-bottom-navigation": "^1.0.5",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^5.12.3",
+    "react-native-paper-select": "^1.1.0",
+    "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-vector-icons": "^10.0.3",
