--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.556.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -19,7 +20,11 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-document-picker": "^9.1.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-floating-action": "^1.22.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-material-bottom-navigation": "^1.0.5",
     "react-native-material-textfield": "^0.16.1",
@@ -28,8 +33,10 @@
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-view-overflow": "^0.0.5"
+    "react-native-view-overflow": "^0.0.5",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
