--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,6 +33,7 @@
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-view-overflow": "^0.0.5",
