--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,16 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.14",
+    "axios": "^1.6.8",
+    "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-document-picker": "^9.1.2",
     "react-native-floating-action": "^1.22.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-material-bottom-navigation": "^1.0.5",
@@ -26,10 +28,11 @@
     "react-native-paper": "^5.12.3",
     "react-native-paper-select": "^1.1.0",
     "react-native-picker-select": "^9.1.3",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-view-overflow": "^0.0.5"
+    "react-native-view-overflow": "^0.0.5",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
