--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.1.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-floating-action": "^1.22.0",
@@ -34,6 +35,7 @@
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-svg": "^15.2.0",
     "react-native-table-component": "^1.2.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.3",
