--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,23 +17,26 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.1.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-floating-action": "^1.22.0",
     "react-native-fs": "^2.20.0",
-    "react-native-get-random-values": "^1.8.0",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-material-bottom-navigation": "^1.0.5",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^5.12.3",
     "react-native-paper-select": "^1.1.0",
     "react-native-picker-select": "^9.1.3",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-table-component": "^1.2.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.3",
